test/fixtures/source-map/output/source_map_throw_construct.snapshot
*/test/fixtures/source-map/output/source_map_throw_construct.mts:13
    throw new Error('message');
          ^


Error: message
    at new Foo (*/test/fixtures/source-map/output/source_map_throw_construct.mts:13:11)
    at <anonymous> (*/test/fixtures/source-map/output/source_map_throw_construct.mts:17:1)
    *
    *
    *

Node.js *
